Fix grid spacing

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button {
 
 .row {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr auto;
   margin-bottom: 0.5rem;
 }
 
